# find-the-password

./: .dockerignore  .gitignore  .mailmap  CHANGELOG.md  Caddyfile  Caddyfile.example  Cargo.toml  Containerfile  Dockerfile  Justfile  LICENSE-MIT  README.md  bacon.toml  cliff.toml  codebook.toml  mise.toml  package.json  pnpm-lock.yaml  rust-analyzer.toml  setup-task.sh  sqlx-data.json
.changeset/: afraid-clocks-enjoy.md  config.json  heavy-pandas-confirm.md  legal-coats-lay.md  light-suits-care.md  perf-hot-path-and-lock-hygiene.md  spicy-animals-wash.md  true-carpets-read.md
.github/: dependabot.yml
.github/workflows/: audit.yml  container.yml  general.yml  release.yml  zizmor.yml
.sqlx/: query-5be8d260f955c9e387de2437f75996fde36b359258f80d2de2395494fffedf31.json  query-a5b32ad8cb662ae91cb22ba126282437cd97c0c8ce07069a675832edb8824b10.json  query-a70340e15f0e138aad5ab34e7a369fc2bbf8a426767d0267f576fdd1bd161cec.json  query-c6fd001247a7d00ff678efaf200f373293cedc44182733e05af9f7c743b6ab3d.json
config/: base.toml  production.toml
data/: passwords.txt
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: example.spec.ts
examples/: README.md  solution.py
examples/passwords/: main.rs
examples/solution/: Cargo.toml
examples/solution/src/: main.rs
migrations/: 1_create_user_table.sql
scripts/: initdb.sh
src/: app.rs  config.rs  error.rs  error_template.rs  fileserv.rs  http.rs  lib.rs  main.rs  router.rs  state.rs  store.rs  user.rs
src/http/: extractors.rs  healthz.rs  passwords.rs
src/model/: user.rs
static/: README.html
style/: main.scss
task01/: Cargo.toml  README.md  Rocket.toml
task01/data/: gen.sh
task01/examples/solution/: README.md
task01/src/: main.rs
task02/: Cargo.toml  README.md
task02/data/: bookofmormon.txt
task02/src/: main.rs
task03/: Cargo.toml  README.html  README.md
task03/config/: local.toml
task03/examples/solution/: main.rs
task03/migrations/: 1_create_user_table.sql
task03/scripts/: initdb.sh
task03/src/: config.rs  main.rs
task03/tests/api/: helpers.rs
task04/: Cargo.toml  README.md  sha256sum.txt
task04/migrations/: 1_database.sql
task04/scripts/: generate_files.py  init_db.sh
task04/src/: main.rs
tests/: http.rs
tests/api/: healthz.rs  helpers.rs  main.rs  passwords.rs
