[package]
name = "challenge"
version = "0.1.1"
edition = "2021"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "A brute-force challenge to introduce computer automation to kids."
repository = "https://github.com/lukehsiao/find-the-password"
homepage = "https://github.com/lukehsiao/find-the-password"
license = "BlueOak-1.0.0"
publish = false
rust-version = "1.80.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
dashmap = "6.1.0"
http = "1"
jiff = { version = "0.1.14", features = ["serde"] }
leptos = { version = "0.6" }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "compression-full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasm-bindgen = "=0.2.99"

[dev-dependencies]
futures = "0.3.31"
mime = "0.3.17"
reqwest = "0.12.9"
tempfile = "3.14.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[[example]]
name = "passwords"
path = "examples/passwords/main.rs"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "challenge"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
