[package]
name = "challenge"
version = "0.1.7"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "A brute-force challenge to introduce computer automation to kids."
repository = "https://github.com/lukehsiao/find-the-password"
homepage = "https://github.com/lukehsiao/find-the-password"
license = "BlueOak-1.0.0"
publish = false
rust-version = "1.89"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
dashmap = "6.2.1"
jiff = { version = "0.2.28", features = ["serde"] }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
rand = { version = "0.10.1", default-features = false, features = ["std_rng"] }
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "compression-full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }
wasm-bindgen = "=0.2.122"

[dev-dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
hegeltest = { version = "0.15.2", features = ["jiff"] }
mime = "0.3.17"
reqwest = "0.13.4"
tempfile = "3.27.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[[example]]
name = "passwords"
path = "examples/passwords/main.rs"

# One source of truth for lints, so `cargo clippy`, bacon, rust-analyzer, and CI
# all agree instead of each passing their own -W flags.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Every component and view helper returns `impl IntoView`; requiring #[must_use]
# on each is noise, not a bug filter.
must_use_candidate = "allow"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:regex",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "challenge"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
