[package]
name = "find-password"
version = "0.1.0"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
data-encoding = "2.3.2"
rocket = "0.4.10"
rocket_contrib = "0.4.10"

[dev-dependencies]
anyhow = "1.0.41"
rayon = "1.5.1"
ureq = "2.1.1"
