[package]
name = "task03"
description = "A simple brute force password challenge."
repository = "https://github.com/lukehsiao/code-challenges"
homepage = "https://github.com/lukehsiao/code-challenges/tree/main/task03"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
publish = false

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["http2"] }
chrono = "0.4.24"
config = { version = "0.13.3", features = ["toml"] }
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
mime = "0.3.17"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.5.0"
test-log = { version = "0.2.11", features = ["trace"] }
tower = { version = "0.4.13", features = ["util"] }

[[example]]
name = "solution"
path = "examples/solution/main.rs"
