[package]
name = "task04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
chrono = "0.4.19"
hyper = { version = "0.14.16", features = ["full"] }
lazy_static = "1.4.0"
rand = { version = "0.8.4", features = ["std_rng"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
tokio = { version = "1.15.0", features = ["full"] }
tower-http = { version = "0.2.1", features = ["trace", "compression-full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "fmt"] }

[dev-dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"
test-log = { version = "0.2.8", features = ["trace"] }
tower = { version = "0.4.12", features = ["util"] }

[[example]]
name = "solution"
path = "examples/solution/main.rs"
